svc/svc_cluster.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-clusterip
  labels:
        app: nginx-svc
  
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
