svc/svc_nlb_internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-internal-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip" #ip or instance
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app: nginx
