svc/svc_nodeport_second.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport-second
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
